--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,14 +1,13 @@
-<% if(messages.success){ %>
-<% for (i = 0; i < messages.success.length; i++){ %>
-	<div class="alert alert-success" role="alert">
-	  <%= messages.success[i] %>
-	</div>
-<% }} %>
 
-
-<% if(messages.failure){ %>
-<% for (i = 0; i < messages.failure.length; i++){ %>
-	<div class="alert alert-danger" role="alert">
-	  <%= messages.failure[i] %>
-	</div>
-<% }} %>
+  <% if (locals.message) { %>
+	<% if (locals.message.type === 'success') { %>
+		<div class="alert alert-success" role="alert">
+			<%= locals.message.msg %>
+		</div>
+	<% }else if(locals.message.type === 'failure') { %>
+		<div class="alert alert-danger" role="alert">
+			<%= locals.message.msg %>
+		</div>
+	<% } %>
+  <% } %>
+  
