--- a/views/partials/top.ejs
+++ b/views/partials/top.ejs
@@ -12,7 +12,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <% if(logged){ %>
+      <% if(locals.logged_in){ %>
           <li class="nav-item">
             <a class="nav-link" href="/dashboard">Dashboard</a>
           </li>
